// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FileView > スナップショット Default 1`] = `
<body>
  <div>
    <div
      class="file-view_styles_root__153z7ur2"
    >
      <button
        class="file-view_styles_summary__153z7ur3"
        type="button"
      >
        <div
          class="file-view_icon__153z7ur0"
        >
          <svg
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8.25 4.5 7.5 7.5-7.5 7.5"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
        <p
          class="text_textStyle__1djq151e text_textStyle_color_currentColor__1djq151i text_textStyle_variants_color_currentColor__1djq1513 text_textStyle_size_75__1djq151k text_textStyle_variants_size_75__1djq1515 text_textStyle_weight_normal__1djq151u"
        >
          example.txt
        </p>
      </button>
    </div>
  </div>
</body>
`;

exports[`FileView > スナップショット LongFileName 1`] = `
<body>
  <div>
    <div
      class="file-view_styles_root__153z7ur2"
    >
      <button
        class="file-view_styles_summary__153z7ur3"
        type="button"
      >
        <div
          class="file-view_icon__153z7ur0"
        >
          <svg
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8.25 4.5 7.5 7.5-7.5 7.5"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
        <p
          class="text_textStyle__1djq151e text_textStyle_color_currentColor__1djq151i text_textStyle_variants_color_currentColor__1djq1513 text_textStyle_size_75__1djq151k text_textStyle_variants_size_75__1djq1515 text_textStyle_weight_normal__1djq151u"
        >
          this_is_a_very_long_file_name_that_should_be_truncated.txt
        </p>
      </button>
    </div>
  </div>
</body>
`;
